--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-scripts": "1.0.13"
   },
   "dependencies": {
+    "@std/esm": "^0.10.0",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "flow-bin": "^0.48.0",
@@ -16,17 +17,19 @@
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "vue": "^2.4.3",
-    "vue-material": "^0.7.5",
+    "vue-color": "^2.4.0",
     "vue-router": "^2.7.0",
-    "vue2-redux": "^1.0.1"
+    "vue-server-renderer": "2.4.3",
+    "vue2-redux": "^1.0.1",
+    "vuetify": "^0.15.7"
   },
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node index.js",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "type": "flow check",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "production": "node src/server.js"
+    "production": "NODE_ENV='production' node index.js"
   }
 }
